Fixing nav on smaller mobile screens.

--- a/source/stylesheets/views/_nav.css.scss
+++ b/source/stylesheets/views/_nav.css.scss
@@ -30,6 +30,10 @@ nav ul, ul.technology {
     &:last-of-type {
       margin: 0;
     }
+
+    @include media(400px) {
+      margin: 0 20px 0 0;
+    }
   }
 
   a {
